--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,5 @@ buck-out/
 
 # CocoaPods
 /ios/Pods/
+firebase-auth-functions/functions/utils/config.js
+firebase-auth-functions/functions/utils/serviceAccount.json
