--- a/firebase-auth-functions/functions/package.json
+++ b/firebase-auth-functions/functions/package.json
@@ -13,6 +13,7 @@
     "node": "8"
   },
   "dependencies": {
+    "@hapi/joi": "^16.1.7",
     "express": "^4.17.1",
     "firebase": "^7.2.1",
     "firebase-admin": "^8.6.1",
