--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@hapi/joi": "^16.1.7",
+    "axios": "^0.19.0",
     "react": "16.9.0",
+    "react-hook-form": "^3.24.1",
     "react-native": "0.61.2",
     "react-native-gesture-handler": "^1.4.1",
     "react-navigation": "^4.0.10",
@@ -33,5 +36,6 @@
   },
   "jest": {
     "preset": "react-native"
-  }
+  },
+  "proxy": "https://us-central1-react-native-auth-functions.cloudfunctions.net/api"
 }
