--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.61.2",
     "react-native-gesture-handler": "^1.4.1",
     "react-navigation": "^4.0.10",
+    "react-navigation-hooks": "^1.1.0",
     "react-navigation-stack": "^1.9.4"
   },
   "devDependencies": {
