--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "@hapi/joi": "^16.1.7",
+    "@react-native-firebase/app": "^6.0.3",
+    "@react-native-firebase/auth": "^6.0.3",
+    "@react-native-firebase/firestore": "^6.0.3",
     "axios": "^0.19.0",
+    "firebase": "^7.2.2",
     "react": "16.9.0",
     "react-hook-form": "^3.24.1",
     "react-native": "0.61.2",
+    "react-native-fbsdk": "^1.0.4",
     "react-native-gesture-handler": "^1.4.1",
     "react-navigation": "^4.0.10",
     "react-navigation-hooks": "^1.1.0",
